--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
           ', minimum-scale=' +
           windowSize.scale +
           ', user-scalable=no'
+      console.log('scale', windowSize.scale)
       document.getElementById('viewport').content = str;
     })
+    alert('window.innerHeight = ' + windowSize.height)
   </script>
   <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
   <div id="YMK-module"></div>
