--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="zh-CN">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" id="viewport"
@@ -44,9 +43,9 @@
       margin-top: 20px;
       color: #333333;
     }
+
   </style>
 </head>
-
 <body style="margin:0;padding:0">
   <script>
     (function () {
@@ -65,7 +64,8 @@
           windowSize.scale +
           ', user-scalable=no'
       document.getElementById('viewport').content = str;
-    })()
+    })
+    alert('window.innerHeight = ' + windowSize.height)
   </script>
   <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
   <div id="YMK-module"></div>
@@ -120,5 +120,4 @@
     };
   </script>
 </body>
-
 </html>
