--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       ratio: window.devicePixelRatio,
       scale: document.documentElement.clientWidth / 375
     };
-    (function () {
+    const isIOS = () => {
+      const userAgent = window.navigator.userAgent.toLowerCase();
+      return /iphone|ipad|ipod/.test(userAgent);
+    };
+    const changeSize = () => {
       str =
         'width=375, initial-scale=' +
         windowSize.scale +
@@ -67,7 +71,20 @@
         windowSize.scale +
         ', user-scalable=no'
       document.getElementById('viewport').content = str;
-    })()
+      console.log('changeSize')
+    }
+    const is14ProOr14Max = () => {
+      if (!isIOS)
+        return false
+      if (window.screen.width === 393 && window.screen.height === 852)
+        return true
+
+      if (window.screen.width === 430 && window.screen.height === 932)
+        return true
+      return false
+    }
+    if (!is14ProOr14Max())
+      changeSize()
   </script>
   <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
   <div id="YMK-module"></div>
