--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     };
     const changeSize = () => {
       str =
-        `width=375, height=${Math.ceil(window.innerHeight / windowSize.scale)}, user-scalable=no`
+        `width=375, height=${Math.ceil(window.screen.height / windowSize.scale)}, user-scalable=no`
       document.getElementById('viewport').content = str;
       console.log('changeSize')
+      console.log('v2');
     }
     const is14ProOr14Max = () => {
       if (!isIOS()) return false
