--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     };
     const changeSize = () => {
       str =
-        `height=${Math.ceil(window.innerHeight.height / windowSize.scale)}, user-scalable=no`
+        `height=${Math.ceil(window.innerHeight / windowSize.scale)}, user-scalable=no`
       document.getElementById('viewport').content = str;
       console.log('changeSize')
       console.log('v4');
