--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
     };
     const changeSize = () => {
       str =
-        `height=${Math.ceil(window.innerHeight / windowSize.scale)}, user-scalable=no`
+        `height=${Math.ceil(windowSize.height / windowSize.scale)}, user-scalable=no`
       document.getElementById('viewport').content = str;
       console.log('changeSize')
-      console.log('v4');
     }
     const is14ProOr14Max = () => {
       if (!isIOS()) return false
@@ -129,6 +128,7 @@
         console.log('scale = ' + windowSize.scale)
         console.log('after window.innerHeight = ' + window.innerHeight)
         console.log('window.innerHeight * windowSize.scale = ' + window.innerHeight * windowSize.scale)
+        console.log('v4');
       })
     };
   </script>
