--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
       const viewportContent = `width= 375, initial-scale=${windowSize.scale}, maximum-scale==${windowSize.scale}, minimum-scale==${windowSize.scale}, user-scalable=no`
       document.getElementById('viewport').content = viewportContent;
     }
-    const checkViewportInnerHeightLegal = () => {
-      for (let i = 0; i < 10; i++) {
-        if (windowSize.height > window.innerHeight * windowSize.scale)
-          windowSize.scale += 0.001
-        else
-          break
-      }
-      changeViewportContent();
-    }
-    changeViewportContent();
+    // const checkViewportInnerHeightLegal = () => {
+    //   for (let i = 0; i < 10; i++) {
+    //     if (windowSize.height > window.innerHeight * windowSize.scale)
+    //       windowSize.scale += 0.001
+    //     else
+    //       break
+    //   }
+    //   changeViewportContent();
+    // }
+    // changeViewportContent();
   </script>
   <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
   <div id="YMK-module"></div>
@@ -124,6 +124,7 @@
     }
 
     window.addEventListener('load', getInitData)
+    // window.addEventListener('load', changeViewportContent)
 
     window.ymkAsyncInit = function () {
       window.YMK.addEventListener('opened', onOpenModule)
