--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <title>香奈儿试戴</title>
+  <title>香奈儿腕表与高级珠宝</title>
   <style>
     body {
       font-family: 'PingFang SC, -apple-system, BlinkMacSystemFont, sans-serif';
@@ -55,13 +52,13 @@
       display: flex;
       align-items: center;
       text-align: center;
-      margin-top: 20px;
+      margin-top: 14px;
       color: #333333;
     }
   </style>
 </head>
 
-<body style="margin:0;padding:0; height: 100vh; overflow: hidden;">
+<body style="margin:0;padding:0;">
   <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
   <script>
     const bewh = 'before window.innerHeight = ' + window.innerHeight
@@ -153,7 +150,7 @@
         console.log('the last window.outerHeight = ' + window.outerHeight)
         console.log('window.innerHeight * windowSize.scale = ' + window.innerHeight * windowSize.scale)
         console.log('document.documentElement.clientHeight =' + document.documentElement.clientHeight)
-        console.log('v19');
+        console.log('v20');
       })
     };
   </script>
