--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
 </head>
 
-<body style="margin:0;padding:0">
+<body style="margin:0;padding:0;">
   <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
   <script>
     const bewh = 'before window.innerHeight = ' + window.innerHeight
@@ -163,7 +163,7 @@
         console.log('the last window.outerHeight = ' + window.outerHeight)
         console.log('window.innerHeight * windowSize.scale = ' + window.innerHeight * windowSize.scale)
         console.log('document.documentElement.clientHeight =' + document.documentElement.clientHeight)
-        console.log('v21');
+        console.log('v22');
       })
     };
   </script>
