--- a/index.html
+++ b/index.html
@@ -158,12 +158,13 @@
         console.log(bewh)
         console.log('origin scale = ' + origscale)
         console.log('scale = ' + windowSize.scale)
-        console.log('the first window.innerHeight = ' + changeInnerHeight1)
+        console.log('before first change window.innerHeight = ' + changeInnerHeight1)
         console.log('the last window.innerHeight = ' + window.innerHeight)
         console.log('the last window.outerHeight = ' + window.outerHeight)
         console.log('window.innerHeight * windowSize.scale = ' + window.innerHeight * windowSize.scale)
         console.log('document.documentElement.clientHeight =' + document.documentElement.clientHeight)
-        console.log('v22');
+        console.log('windowSize.height =' + windowSize.height)
+        console.log('v23');
       })
     };
   </script>
