--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         const vConsole = new window.VConsole();
         console.log(bewh)
         console.log('origin scale = ' + origscale)
-        console.log('scale = ' + windowSize.scale)
+        console.log('now scale = ' + windowSize.scale)
         console.log('before first change window.innerHeight = ' + changeInnerHeight1)
         console.log('the last window.innerHeight = ' + window.innerHeight)
         console.log('the last window.outerHeight = ' + window.outerHeight)
