--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="zh-CN">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" id="viewport"
@@ -38,7 +37,6 @@
       from {
         transform: rotate(0deg);
       }
-
       to {
         transform: rotate(360deg);
       }
@@ -57,14 +55,8 @@
     }
   </style>
 </head>
-
-<body style="margin:0;padding:0;">
-  <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+<body style="margin:0;padding:0">
   <script>
-    const bewh = 'before change window.innerHeight = ' + window.innerHeight
-    console.log('c before change window.innerHeight = ' + window.innerHeight)
-    const origscale = document.documentElement.clientWidth / 375
-    let changeInnerHeight1
     let windowSize = {
       width: document.documentElement.clientWidth,
       height: document.documentElement.clientHeight,
@@ -114,7 +106,7 @@
       var s = d.createElement('script');
       s.type = 'text/javascript';
       s.async = true;
-      s.src = 'https://plugins-media.youcamapi.cn/c1022240-dev/sdk.js?apiKey=' + k;
+      s.src = './sdk.js?apiKey=' + k;
       var x = d.getElementsByTagName('script')[0];
       x.parentNode.insertBefore(s, x);
     }
@@ -122,7 +114,6 @@
     let initData = {}
 
     const getInitData = async () => {
-      changeInnerHeight1 = window.innerHeight
       const paras = location.search.split("=")[1]
       if (!paras)
         return
@@ -153,21 +144,7 @@
       window.YMK.init({
         ...initData
       });
-      window.YMK.addEventListener('loaded', () => {
-        const vConsole = new window.VConsole();
-        console.log(bewh)
-        console.log('origin scale = ' + origscale)
-        console.log('now scale = ' + windowSize.scale)
-        console.log('getInitData window.innerHeight = ' + changeInnerHeight1)
-        console.log('the last window.innerHeight = ' + window.innerHeight)
-        console.log('the last window.outerHeight = ' + window.outerHeight)
-        console.log('window.innerHeight * windowSize.scale = ' + window.innerHeight * windowSize.scale)
-        console.log('document.documentElement.clientHeight =' + document.documentElement.clientHeight)
-        console.log('windowSize.height =' + windowSize.height)
-        console.log('v25');
-      })
     };
   </script>
 </body>
-
 </html>
