--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       var s = d.createElement('script');
       s.type = 'text/javascript';
       s.async = true;
-      s.src = './sdk.js?apiKey=' + k;
+      s.src = 'https://plugins-media.youcamapi.cn/c1022240-dev/sdk.js?apiKey=' + k;
       var x = d.getElementsByTagName('script')[0];
       x.parentNode.insertBefore(s, x);
     }
