--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     }
     changeViewportContent();
   </script>
-  <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
+  <script type="text/javascript" src="https://storage.360buyimg.com/api-test/jssdk.js"></script>
   <div id="YMK-module"></div>
   <div id="loadingContainer">
     <div id="loadingIcon">
